updated spacing issue on footer

--- a/src/dssweb.theme.magic/ucdavis.wireframe/sass/_theme.scss
+++ b/src/dssweb.theme.magic/ucdavis.wireframe/sass/_theme.scss
@@ -1286,13 +1286,6 @@ body.contact-type {
 			}
 		}
 	}
-	#footer {
-		.foot-wrap {
-			#foot-left {
-				margin-left: 0;
-			}
-		}
-	}
 }
 
 
